--- a/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
+++ b/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
@@ -52,22 +52,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="DbIntegration\BankGuaranteeContext.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201812111750295_InitialCreate.cs" />
     <Compile Include="Migrations\201812111750295_InitialCreate.Designer.cs">
       <DependentUpon>201812111750295_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812121756133_CreateAuthentification.cs" />
+    <Compile Include="Migrations\201812121756133_CreateAuthentification.Designer.cs">
+      <DependentUpon>201812121756133_CreateAuthentification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\LoginInputDto.cs" />
+    <Compile Include="Models\LoginResultDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\LoginForm.lkt-US.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812111750295_InitialCreate.resx">
       <DependentUpon>201812111750295_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812121756133_CreateAuthentification.resx">
+      <DependentUpon>201812121756133_CreateAuthentification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -77,6 +93,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
