Сделал показ для специалиста списка Банковских Гарантий

--- a/BankGuarantee.Desktop/App.config
+++ b/BankGuarantee.Desktop/App.config
@@ -19,6 +19,9 @@
   </entityFramework>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=LAPTOP-SNGF6CB6\SQLSERVER17;Initial Catalog=BankGuarantee;Integrated Security=True"
-        providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
+    <add name="BankGuarantee.Desktop.Properties.Settings.BankGuaranteeConnectionString"
+      connectionString="Data Source=LAPTOP-SNGF6CB6\SQLSERVER17;Initial Catalog=BankGuarantee;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
