--- a/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
+++ b/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
@@ -52,8 +52,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="BankGuaranteeDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BankGuaranteeDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="BankGuaranteeDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BankGuaranteeDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\AppStartController.cs" />
     <Compile Include="DbIntegration\BankGuaranteeContext.cs" />
+    <Compile Include="Forms\GuaranteeCreateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GuaranteeCreateForm.Designer.cs">
+      <DependentUpon>GuaranteeCreateForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\GuaranteesListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GuaranteesListForm.Designer.cs">
+      <DependentUpon>GuaranteesListForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\GuaranteeViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GuaranteeViewForm.Designer.cs">
+      <DependentUpon>GuaranteeViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,11 +96,24 @@
     <Compile Include="Migrations\201812121756133_CreateAuthentification.Designer.cs">
       <DependentUpon>201812121756133_CreateAuthentification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812130618352_AddGuaranteeNameColumn.cs" />
+    <Compile Include="Migrations\201812130618352_AddGuaranteeNameColumn.Designer.cs">
+      <DependentUpon>201812130618352_AddGuaranteeNameColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LoginInputDto.cs" />
     <Compile Include="Models\LoginResultDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\GuaranteeCreateForm.resx">
+      <DependentUpon>GuaranteeCreateForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GuaranteesListForm.resx">
+      <DependentUpon>GuaranteesListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GuaranteeViewForm.resx">
+      <DependentUpon>GuaranteeViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.lkt-US.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +126,9 @@
     <EmbeddedResource Include="Migrations\201812121756133_CreateAuthentification.resx">
       <DependentUpon>201812121756133_CreateAuthentification.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812130618352_AddGuaranteeNameColumn.resx">
+      <DependentUpon>201812130618352_AddGuaranteeNameColumn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -95,6 +139,28 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="BankGuaranteeDataSet.xsc">
+      <DependentUpon>BankGuaranteeDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="BankGuaranteeDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BankGuaranteeDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="BankGuaranteeDataSet.xss">
+      <DependentUpon>BankGuaranteeDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="BankGuaranteeDataSet1.xsc">
+      <DependentUpon>BankGuaranteeDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="BankGuaranteeDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BankGuaranteeDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="BankGuaranteeDataSet1.xss">
+      <DependentUpon>BankGuaranteeDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
