--- a/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
+++ b/BankGuarantee.Desktop/BankGuarantee.Desktop.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\OrganizationController.cs" />
+    <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="DbIntegration\BankGuaranteeDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -87,7 +88,14 @@
     <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\OrganizationCreateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OrganizationCreateForm.Designer.cs">
+      <DependentUpon>OrganizationCreateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\IGuaranteeViewOpener.cs" />
+    <Compile Include="Interfaces\IOrganizationCreator.cs" />
     <Compile Include="Migrations\201812111750295_InitialCreate.cs" />
     <Compile Include="Migrations\201812111750295_InitialCreate.Designer.cs">
       <DependentUpon>201812111750295_InitialCreate.cs</DependentUpon>
@@ -101,9 +109,11 @@
       <DependentUpon>201812130618352_AddGuaranteeNameColumn.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\GetOrganizationNamesResultDto.cs" />
+    <Compile Include="Models\EntitiesDisplayValuesResultDto.cs" />
+    <Compile Include="Models\EntityCreatedDto.cs" />
     <Compile Include="Models\LoginInputDto.cs" />
     <Compile Include="Models\LoginResultDto.cs" />
+    <Compile Include="Models\OperationExecutedDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\GuaranteeCreateForm.resx">
@@ -117,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OrganizationCreateForm.resx">
+      <DependentUpon>OrganizationCreateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812111750295_InitialCreate.resx">
       <DependentUpon>201812111750295_InitialCreate.cs</DependentUpon>
