--- a/BankGuarantee.Domain/BankGuarantee.Domain.csproj
+++ b/BankGuarantee.Domain/BankGuarantee.Domain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Models\Contract.cs" />
     <Compile Include="Models\Guarantee.cs" />
     <Compile Include="Models\Organization.cs" />
     <Compile Include="Models\Person.cs" />
